[gd_scene load_steps=41 format=3 uid="uid://ubd6545ym8aw"]

[ext_resource type="Script" uid="uid://ctjxlfrs606" path="res://scripts/enemy.gd" id="1_7p1mj"]
[ext_resource type="Texture2D" uid="uid://dty1om5ftwa0a" path="res://assets/effects/fire.png" id="2_5uy6h"]
[ext_resource type="Texture2D" uid="uid://cgvut2olu2ua2" path="res://assets/effects/exlamation/0.png" id="2_ipns3"]
[ext_resource type="Texture2D" uid="uid://8nnqpt2h12c" path="res://assets/effects/slash.png" id="2_md0e3"]
[ext_resource type="Texture2D" uid="uid://8jwixdteculs" path="res://assets/effects/hit/3.png" id="3_4ra3w"]
[ext_resource type="Texture2D" uid="uid://wsa3fx031bgw" path="res://assets/effects/exlamation/1.png" id="3_8qclf"]
[ext_resource type="Texture2D" uid="uid://bgxp63wt43vpr" path="res://assets/effects/exlamation/2.png" id="4_w8i8w"]
[ext_resource type="Texture2D" uid="uid://c7ytcgi6aed0i" path="res://assets/enemies/Dead.png" id="5_c4w8v"]
[ext_resource type="Texture2D" uid="uid://ccbev1aoef55u" path="res://assets/effects/exlamation/4.png" id="5_otmr2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("2_5uy6h")
region = Rect2(25, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("2_5uy6h")
region = Rect2(50, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("2_5uy6h")
region = Rect2(75, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("2_5uy6h")
region = Rect2(100, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("2_5uy6h")
region = Rect2(125, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("2_5uy6h")
region = Rect2(150, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("2_5uy6h")
region = Rect2(175, 0, 25, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("2_md0e3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("2_md0e3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("2_md0e3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_md0e3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_md0e3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_md484"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ipns3")
}, {
"duration": 1.0,
"texture": ExtResource("3_8qclf")
}, {
"duration": 1.0,
"texture": ExtResource("4_w8i8w")
}, {
"duration": 1.0,
"texture": ExtResource("4_w8i8w")
}, {
"duration": 1.0,
"texture": ExtResource("4_w8i8w")
}, {
"duration": 1.0,
"texture": ExtResource("5_otmr2")
}],
"loop": false,
"name": &"exclamation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}],
"loop": false,
"name": &"fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}],
"loop": false,
"name": &"slash",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("5_c4w8v")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("5_c4w8v")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("5_c4w8v")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("5_c4w8v")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("5_c4w8v")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("5_c4w8v")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("5_c4w8v")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("5_c4w8v")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("5_c4w8v")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("5_c4w8v")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("5_c4w8v")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("5_c4w8v")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("5_c4w8v")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("5_c4w8v")
region = Rect2(768, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_lioqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3vcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f82d")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8tegq"]
animations = [{
"frames": [],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c4w8v"]
radius = 13.0
height = 26.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(34, 17)
collision_layer = 2
script = ExtResource("1_7p1mj")

[node name="vfx" type="AnimatedSprite2D" parent="."]
z_index = 20
scale = Vector2(1.4488385, 1.3553885)
sprite_frames = SubResource("SpriteFrames_md484")
animation = &"exclamation"
frame = 5
frame_progress = 1.0

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
texture = ExtResource("3_4ra3w")
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 1.5
scale_amount_max = 2.0

[node name="death" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.359375, 0.359375)
sprite_frames = SubResource("SpriteFrames_lioqc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8tegq")

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 8
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
debug_color = Color(0.5323095, 0.46933287, 0.8476676, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_c4w8v")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
